Updated index.html news section, and mobile alignment Fixed spelling mistake in contact-us.html and removed extra class in about-us.html

--- a/Style Guide/css/format.css
+++ b/Style Guide/css/format.css
@@ -10,6 +10,11 @@
   padding-right: 1em;
 }
 
+#content-index{
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
 /* ------ styling the side navigation bar ----- */
 
 #side-nav-bar{
