--- a/Style Guide/css/grid.css
+++ b/Style Guide/css/grid.css
@@ -26,7 +26,7 @@
 	flex: 1 1 auto;
 }
 
-#content {
+#content, #content-index {
 	-webkit-flex: 1 1 auto;
 	-ms-flex: 1 1 auto;
 	flex: 1 1 auto;
