--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -588,7 +588,7 @@ section code {
   display:inline-block;
   margin-right: 1em;
 }
-#subpageheading-rendered{
+/*#subpageheading-rendered{
   font-size: 26px;
   font-family:'Avenir Medium';
   background-color: #FFC287;
@@ -597,7 +597,7 @@ section code {
   border-radius: 15px;
   text-align: left;
   padding: 0.25em 1em 0.25em 1em;
-}
+}*/
 
 .sectionheading{
 /*  margin-top: 5em;*/
